# hspec

./: .editorconfig  .ghci  .gitattributes  .gitignore  .mailmap  .travis.yml  CHANGES.markdown  LICENSE  README  README.markdown  REPORT  Setup.lhs  Specs.hs  cabal.project  changelog  flake.nix  hspec-meta.cabal  hspec.cabal  hspec.hs  hspec2.cabal  mk-sdist.sh  package.yaml  runtests.hs  stack.yaml  test-release.sh  tinc.yaml  travis.sh  version.yaml
.hpack/: defaults.yaml
Test/: Hspec.hs
hspec-contrib/: .ghci  LICENSE  hspec-contrib.cabal  package.yaml
hspec-contrib/src/Test/Hspec/: Contrib.hs
hspec-contrib/src/Test/Hspec/Contrib/: HUnit.hs  LoggingFacade.hs  Retry.hs
hspec-contrib/src/Test/Hspec/Contrib/Mocks/: V1.hs
hspec-contrib/test/: Helper.hs
hspec-contrib/test/Test/Hspec/: Contrib.hs  ContribSpec.hs
hspec-contrib/test/Test/Hspec/Contrib/: HUnitSpec.hs  LoggingFacadeSpec.hs  RetrySpec.hs
hspec-contrib/test/Test/Hspec/Contrib/Mocks/: V1Spec.hs
hspec-core/: .ghci  .gitignore  LICENSE  help.txt  hspec-core.cabal  package.yaml  update-help.sh
hspec-core/api/: Test.Hspec.Api.Example.V1  Test.Hspec.Api.Example.V1.Options  Test.Hspec.Core.Extension  Test.Hspec.Core.Extension.Config  Test.Hspec.Core.Extension.Item  Test.Hspec.Core.Extension.Option  Test.Hspec.Core.Extension.Spec  Test.Hspec.Core.Extension.Tree  Test.Hspec.Core.Format  Test.Hspec.Core.Formatters  Test.Hspec.Core.Formatters.V1  Test.Hspec.Core.Formatters.V2  Test.Hspec.Core.Hooks  Test.Hspec.Core.QuickCheck  Test.Hspec.Core.QuickCheck.Options  Test.Hspec.Core.Runner  Test.Hspec.Core.Spec  Test.Hspec.Core.Util
hspec-core/example/: CustomMonadStackSpec.hs  Spec.hs
hspec-core/src/: DList.hs  NonEmpty.hs
hspec-core/src/GetOpt/: Declarative.hs
hspec-core/src/GetOpt/Declarative/: Environment.hs  Interpret.hs  Types.hs  Util.hs
hspec-core/src/Test/: Hspec.hs
hspec-core/src/Test/Hspec/: CI.hs  Compat.hs  Config.hs  Core.hs  FailureReport.hs  Formatters.hs  HUnit.hs  Options.hs  QuickCheck.hs  Runner.hs  Tags.hs  Util.hs
hspec-core/src/Test/Hspec/Api/Example/: V1.hs
hspec-core/src/Test/Hspec/Api/Example/V1/: Options.hs
hspec-core/src/Test/Hspec/Core/: Annotations.hs  Clock.hs  Compat.hs  Config.hs  Example.hs  Extension.hs  FailureReport.hs  Format.hs  Formatters.hs  Golden.hs  Hooks.hs  Issue.hs  Options.hs  QuickCheck.hs  QuickCheckUtil.hs  Runner.hs  Shuffle.hs  Spec.hs  Timer.hs  Tree.hs  Type.hs  Uncurry.hs  Util.hs
hspec-core/src/Test/Hspec/Core/Config/: Definition.hs  Options.hs  Util.hs
hspec-core/src/Test/Hspec/Core/Example/: Location.hs  Options.hs
hspec-core/src/Test/Hspec/Core/Extension/: Config.hs  Item.hs  Option.hs  Spec.hs  Tree.hs
hspec-core/src/Test/Hspec/Core/Extension/Config/: Type.hs
hspec-core/src/Test/Hspec/Core/Formatters/: Diff.hs  Free.hs  GithubAction.hs  Internal.hs  Monad.hs  Pretty.hs  TextBlock.hs  V1.hs  V2.hs
hspec-core/src/Test/Hspec/Core/QuickCheck/: Options.hs  Util.hs
hspec-core/src/Test/Hspec/Core/Runner/: Eval.hs  JSON.hs  JobQueue.hs  PrintSlowSpecItems.hs  Result.hs  Tree.hs  Util.hs
hspec-core/src/Test/Hspec/Core/Spec/: Env.hs  Monad.hs
hspec-core/src/Test/Hspec/Formatters/: Internal.hs
hspec-core/src/Test/Hspec/Runner/: Eval.hs  Tree.hs
hspec-core/test/: All.hs  Helper.hs  Mock.hs  Spec.hs  SpecHook.hs
hspec-core/test/Data/Algorithm/: DiffSpec.hs
hspec-core/test/GetOpt/Declarative/: EnvironmentSpec.hs  UtilSpec.hs
hspec-core/test/Test/Hspec/: CISpec.hs  CompatSpec.hs  ConfigSpec.hs  FailureReportSpec.hs  FormattersSpec.hs  HUnitSpec.hs  OptionsSpec.hs  QuickCheckSpec.hs  RunnerSpec.hs  TagsSpec.hs  TimerSpec.hs  UtilSpec.hs
hspec-core/test/Test/Hspec/Core/: AnnotationsSpec.hs  ClockSpec.hs  CompatSpec.hs  ConfigSpec.hs  ExampleSpec.hs  FailureReportSpec.hs  FormatSpec.hs  FormattersSpec.hs  GoldenSpec.hs  HooksSpec.hs  OptionsSpec.hs  QuickCheckSpec.hs  QuickCheckUtilSpec.hs  RunnerSpec.hs  ShuffleSpec.hs  SpecSpec.hs  TimerSpec.hs  TreeSpec.hs  TypeSpec.hs  UncurrySpec.hs  UtilSpec.hs
hspec-core/test/Test/Hspec/Core/Config/: DefinitionSpec.hs  OptionsSpec.hs  UtilSpec.hs
hspec-core/test/Test/Hspec/Core/Example/: LocationSpec.hs
hspec-core/test/Test/Hspec/Core/Formatters/: DiffSpec.hs  InternalSpec.hs  PrettySpec.hs  V1Spec.hs  V2Spec.hs
hspec-core/test/Test/Hspec/Core/QuickCheck/: UtilSpec.hs
hspec-core/test/Test/Hspec/Core/Runner/: EvalSpec.hs  JSONSpec.hs  JobQueueSpec.hs  PrintSlowSpecItemsSpec.hs  ResultSpec.hs  UtilSpec.hs
hspec-discover/: .ghci  LICENSE  README.markdown  hspec-discover.cabal  hspecpp.cabal  package.yaml
hspec-discover/driver/: hspec-discover.hs
hspec-discover/example/: BazSpec.hs  FooSpec.hs  example.cabal
hspec-discover/example/Foo/: BarSpec.hs
hspec-discover/integration-test/: hspec-discover-integration-tests.cabal  package.yaml
hspec-discover/integration-test/with-config/: FooSpec.hs  SpecConfig.hs
hspec-discover/integration-test/with-formatter/: Spec.hs
hspec-discover/integration-test/with-io-formatter/: FooSpec.hs  Formatter.hs  Spec.hs
hspec-discover/integration-test/with-module-name/: Main.hs
hspec-discover/integration-test/with-no-implicit-prelude/: FooSpec.hs
hspec-discover/integration-test/with-spec-hook/: FooSpec.hs  SpecHook.hs
hspec-discover/integration-test/with-spec-hook/Foo/: BarSpec.hs  BazSpec.hs  SpecHook.hs
hspec-discover/src/: Config.hs  Main.hs  Run.hs
hspec-discover/src/Test/Hspec/: Discover.hs
hspec-discover/src/Test/Hspec/Discover/: Config.hs  Run.hs  Sort.hs
hspec-discover/test/: ConfigSpec.hs  Helper.hs  RunSpec.hs  Spec.hs
hspec-discover/test/Test/Hspec/: DiscoverSpec.hs  Meta.hs
hspec-discover/test/Test/Hspec/Discover/: ConfigSpec.hs  RunSpec.hs  SortSpec.hs
hspec-example/: .ghci  .travis.yml  LICENSE  README.markdown  README.md  README.rst  strip.cabal
hspec-example/src/Data/String/: Strip.hs
hspec-example/test/: Main.hs
hspec-example/test/Data/String/: StripSpec.hs
hspec-th/: LICENSE  hspec-th.cabal
hspec-th/example/: Spec.hs
hspec-th/src/Test/Hspec/: TH.hs
hspec-th/test/Test/Hspec/: THSpec.hs
(+255 files in other folders)
