name:             hspec
version:          2.2.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2015 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A version of Hspec which is used to test Hspec itself
description:      A stable version of Hspec which is used to test the
                  in-development version of Hspec.

extra-source-files:
  changelog

source-repository head
  type: git
  location: https://github.com/hspec/hspec

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , hspec-core == 2.2.0
    , hspec-discover == 2.2.0
    , hspec-expectations == 0.7.2.*
    , transformers >= 0.2.2.0
    , QuickCheck >= 2.5.1
    , HUnit >= 1.2.5
  exposed-modules:
      Test.Hspec
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.QuickCheck
      Test.Hspec.Discover
      Test.Hspec.Core
      Test.Hspec.HUnit
  default-language: Haskell2010
