name:             hspec-meta
version:          1.4.5
license:          BSD3
license-file:     LICENSE
copyright:        (c) 2011-2012 Trystan Spangler, (c) 2011-2012 Simon Hengel, (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.com/
synopsis:         A version of Hspec which is used to test Hspec itself

description:      A stable version of Hspec which is used to test the
                  in-development version of Hspec.

-- find hspec-discover/test-data/ -type f
extra-source-files:
  hspec-discover/test-data/single-spec/FooSpec.hs
  hspec-discover/test-data/single-spec/Spec.hs
  hspec-discover/test-data/single-spec-nested/Foo/BarSpec.hs
  hspec-discover/test-data/nested-spec/FooSpec.hs
  hspec-discover/test-data/nested-spec/Foo/Bar/BazSpec.hs
  hspec-discover/test-data/nested-spec/Foo/BarSpec.hs
  hspec-discover/test-data/lhs-spec/FooSpec.lhs
  hspec-discover/test-data/lhs-spec/Spec.hs
  hspec-discover/test-data/several-specs/BarSpec.hs
  hspec-discover/test-data/several-specs/FooSpec.hs
  hspec-discover/test-data/several-specs/BazSpec.hs
  hspec-discover/test-data/empty-dir/Foo/Bar/Baz/.placeholder
  hspec-discover/test-data/prefix-name/FooSpec.hs
  hspec-discover/test-data/prefix-name/Foo/BazSpec.hs
  hspec-discover/test-data/prefix-name/FooBarSpec.hs
  hspec-discover/test-data/prefix-name/FooBar/BazSpec.hs
  hspec-discover/test-data/no-intermediate-specs/Foo/Bar/BazSpec.hs

source-repository head
  type: git
  location: https://github.com/hspec/hspec

Library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base          == 4.*
    , setenv
    , silently      >= 1.1.1
    , ansi-terminal >= 0.5
    , time
    , transformers  >= 0.2.2.0 && < 0.4.0
    , HUnit         >= 1.2.5
    , QuickCheck    >= 2.4.0.1
    , hspec-expectations == 0.3.0.*
  exposed-modules:
      Test.Hspec.Meta
  other-modules:
      Test.Hspec
      Test.Hspec.Core
      Test.Hspec.Monadic
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.HUnit
      Test.Hspec.QuickCheck
      Test.Hspec.Util
      Test.Hspec.Compat
      Test.Hspec.Pending
      Test.Hspec.Core.Type
      Test.Hspec.Config
      Test.Hspec.FailureReport
      Test.Hspec.Formatters.Internal

-- hspec-discover
executable hspec-meta-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      hspec-discover/src
  main-is:
      Main.hs
  other-modules:
      Run
  build-depends:
      base    == 4.*
    , filepath
    , directory
