name:             hspec-meta
version:          1.8.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2013 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A version of Hspec which is used to test Hspec itself
description:      A stable version of Hspec which is used to test the
                  in-development version of Hspec.

-- find hspec-discover/test-data/ -type f
extra-source-files:
  hspec-discover/test-data/nested-spec/FooSpec.hs
  hspec-discover/test-data/nested-spec/Foo/Bar/BazSpec.hs
  hspec-discover/test-data/nested-spec/Foo/BarSpec.hs
  hspec-discover/test-data/empty-dir/Foo/Bar/Baz/.placeholder

source-repository head
  type: git
  location: https://github.com/hspec/hspec

Library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base          == 4.*
    , random        == 1.0.*
    , setenv
    , ansi-terminal >= 0.5
    , time
    , transformers  >= 0.2.2.0 && < 0.4.0
    , deepseq
    , HUnit         >= 1.2.5
    , QuickCheck    >= 2.5.1
    , quickcheck-io
    , hspec-expectations
  exposed-modules:
      Test.Hspec.Meta
  other-modules:
      Test.Hspec
      Test.Hspec.Core
      Test.Hspec.Monadic
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.HUnit
      Test.Hspec.QuickCheck
      Test.Hspec.Util
      Test.Hspec.Compat
      Test.Hspec.Core.Type
      Test.Hspec.Core.QuickCheckUtil
      Test.Hspec.Config
      Test.Hspec.Options
      Test.Hspec.FailureReport
      Test.Hspec.Runner.Eval
      Test.Hspec.Formatters.Internal
      Test.Hspec.Timer

-- hspec-discover
executable hspec-meta-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      hspec-discover/src
  main-is:
      Main.hs
  other-modules:
      Run
      Config
  build-depends:
      base    == 4.*
    , filepath
    , directory
