name:             hspec
version:          1.13.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2014 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A Testing Framework for Haskell
description:      Hspec is a testing framework for Haskell. It is inspired by
                  the Ruby library RSpec. Some of Hspec's distinctive features
                  are:
                  .
                  * a friendly DSL for defining tests
                  .
                  * integration with QuickCheck, SmallCheck, and HUnit
                  .
                  * parallel test execution
                  .
                  * automatic discovery of test files
                  .
                  The Hspec Manual is at <http://hspec.github.io/>.

extra-source-files:
  changelog

source-repository head
  type: git
  location: https://github.com/hspec/hspec

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , hspec-core == 1.13.0
    , hspec-discover == 1.13.0
    , hspec-expectations
  exposed-modules:
      Test.Hspec
      Test.Hspec.Core
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.HUnit
      Test.Hspec.QuickCheck
      Test.Hspec.Discover
  default-language: Haskell2010

test-suite example
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  hs-source-dirs:
      example
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , hspec
    , QuickCheck
  default-language: Haskell2010
