name:             hspec
version:          2.1.2
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2014 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A Testing Framework for Haskell
description:      Hspec is a testing framework for Haskell. It is inspired by
                  the Ruby library RSpec. Some of Hspec's distinctive features
                  are:
                  .
                  * a friendly DSL for defining tests
                  .
                  * integration with QuickCheck, SmallCheck, and HUnit
                  .
                  * parallel test execution
                  .
                  * automatic discovery of test files
                  .
                  The Hspec Manual is at <http://hspec.github.io/>.

extra-source-files:
  changelog

source-repository head
  type: git
  location: https://github.com/hspec/hspec

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , hspec-core == 2.1.2
    , hspec-discover == 2.1.2
    , hspec-expectations == 0.6.1.*
    , transformers >= 0.2.2.0
    , QuickCheck >= 2.5.1
    , HUnit >= 1.2.5
  exposed-modules:
      Test.Hspec
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.QuickCheck
      Test.Hspec.Discover
      Test.Hspec.Core
      Test.Hspec.HUnit
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Helper
      HelperSpec
      Test.Hspec.DiscoverSpec
  build-depends:
      base == 4.*
    , hspec-core
    , hspec

    , directory
    , stringbuilder
    , hspec-meta >= 1.12
  default-language: Haskell2010
