name:             hspec2
version:          0.0.1
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2014 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         Alpha version of Hspec 2.0
description:      This is an alpha release of Hspec 2.0.
                  If you are looking for a stable solution for testing Haskell
                  code, use the 1.x series of Hspec: <http://hspec.github.io/>

-- find hspec-discover/test-data/ -type f
extra-source-files:
  hspec-discover/test-data/nested-spec/FooSpec.hs
  hspec-discover/test-data/nested-spec/Foo/Bar/BazSpec.hs
  hspec-discover/test-data/nested-spec/Foo/BarSpec.hs
  hspec-discover/test-data/empty-dir/Foo/Bar/Baz/.placeholder

source-repository head
  type: git
  location: https://github.com/hspec/hspec

Library
  exposed: False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base          == 4.*
    , random        == 1.0.*
    , setenv
    , ansi-terminal >= 0.5
    , time
    , transformers  >= 0.2.2.0 && < 0.4.0
    , deepseq
    , HUnit         >= 1.2.5
    , QuickCheck    >= 2.5.1
    , quickcheck-io
    , hspec-expectations == 0.5.0.*
  exposed-modules:
      Test.Hspec
      Test.Hspec.Core
      Test.Hspec.Runner
      Test.Hspec.Formatters
      Test.Hspec.HUnit
      Test.Hspec.QuickCheck
  other-modules:
      Test.Hspec.Util
      Test.Hspec.Compat
      Test.Hspec.Core.Type
      Test.Hspec.Core.QuickCheckUtil
      Test.Hspec.Config
      Test.Hspec.Options
      Test.Hspec.FailureReport
      Test.Hspec.Runner.Eval
      Test.Hspec.Runner.Tree
      Test.Hspec.Formatters.Internal
      Test.Hspec.Timer

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  other-modules:
      Mock
      Helper
      Test.HspecSpec
      Test.Hspec.CompatSpec
      Test.Hspec.Core.TypeSpec
      Test.Hspec.FailureReportSpec
      Test.Hspec.FormattersSpec
      Test.Hspec.HUnitSpec
      Test.Hspec.OptionsSpec
      Test.Hspec.QuickCheckSpec
      Test.Hspec.RunnerSpec
      Test.Hspec.TimerSpec
      Test.Hspec.UtilSpec
  ghc-options:
      -Wall -Werror
  build-depends:
      base          == 4.*
    , random        == 1.0.*
    , setenv
    , silently      >= 1.2.4
    , ansi-terminal
    , time
    , transformers
    , deepseq
    , HUnit
    , QuickCheck
    , quickcheck-io
    , hspec-expectations

    , hspec-meta >= 1.8.0
    , process
    , ghc-paths

test-suite doctests
  main-is:
      doctests.hs
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror -threaded
  hs-source-dirs:
      test
  build-depends:
      base    == 4.*
    , doctest >= 0.9.4.1

test-suite example
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  hs-source-dirs:
      example
  ghc-options:
      -Wall -Werror
  build-depends:
      base    == 4.*
    , hspec
    , QuickCheck

-- hspec-discover
executable hspec-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      hspec-discover/src
  main-is:
      Main.hs
  other-modules:
      Run
      Config
  build-depends:
      base    == 4.*
    , filepath
    , directory

test-suite hspec-discover-spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      hspec-discover/src
    , hspec-discover/test
  main-is:
      Spec.hs
  other-modules:
      RunSpec
      ConfigSpec
  build-depends:
      base    == 4.*
    , filepath
    , directory
    , hspec-meta
