name:             hspec-contrib
version:          0.4.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2017 Simon Hengel,
                  (c) 2014 Junji Hashimoto

maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         Contributed functionality for Hspec
description:      Contributed functionality for Hspec

source-repository head
  type: git
  location: https://github.com/hspec/hspec
  subdir: hspec-contrib

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base == 4.*
    , hspec-core
    , HUnit
  exposed-modules:
      Test.Hspec.Contrib.Retry
      Test.Hspec.Contrib.HUnit
  other-modules:
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      Helper
      Test.Hspec.Contrib.RetrySpec
      Test.Hspec.Contrib.HUnitSpec
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , hspec-core
    , HUnit

    , hspec-contrib
    , hspec
    , QuickCheck
  default-language: Haskell2010
