name:             hspec-core
version:          1.13.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2014 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A Testing Framework for Haskell
description:      Hspec is a testing framework for Haskell. It is inspired by
                  the Ruby library RSpec. Some of Hspec's distinctive features
                  are:
                  .
                  * a friendly DSL for defining tests
                  .
                  * integration with QuickCheck, SmallCheck, and HUnit
                  .
                  * parallel test execution
                  .
                  * automatic discovery of test files
                  .
                  The Hspec Manual is at <http://hspec.github.io/>.

source-repository head
  type: git
  location: https://github.com/hspec/hspec
  subdir: hspec-core

library
  exposed: False
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base >= 4.3
    , random
    , tf-random
    , setenv
    , ansi-terminal >= 0.5
    , time
    , transformers >= 0.2.2.0
    , deepseq
    , HUnit >= 1.2.5
    , QuickCheck >= 2.5.1
    , quickcheck-io
    , hspec-expectations
    , async >= 2
  exposed-modules:
      Test.Hspec.Core
      Test.Hspec.Core.Spec
      Test.Hspec.Core.Hooks
      Test.Hspec.Runner
      Test.Hspec.Runner.Tree
      Test.Hspec.Formatters
      Test.Hspec.HUnit
      Test.Hspec.QuickCheck
      Test.Hspec.Util
  other-modules:
      Test.Hspec.Compat
      Test.Hspec.Core.Type
      Test.Hspec.Core.QuickCheckUtil
      Test.Hspec.Config
      Test.Hspec.Options
      Test.Hspec.FailureReport
      Test.Hspec.Runner.Eval
      Test.Hspec.Formatters.Internal
      Test.Hspec.Timer
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  other-modules:
      Mock
      Helper
      Test.Hspec.Core.SpecSpec
      Test.Hspec.Core.HooksSpec
      Test.Hspec.CompatSpec
      Test.Hspec.Core.QuickCheckUtilSpec
      Test.Hspec.Core.TypeSpec
      Test.Hspec.FailureReportSpec
      Test.Hspec.FormattersSpec
      Test.Hspec.HUnitSpec
      Test.Hspec.OptionsSpec
      Test.Hspec.QuickCheckSpec
      Test.Hspec.RunnerSpec
      Test.Hspec.TimerSpec
      Test.Hspec.UtilSpec
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , random
    , tf-random
    , setenv
    , ansi-terminal
    , time
    , transformers
    , deepseq
    , HUnit
    , QuickCheck
    , quickcheck-io
    , hspec-expectations
    , async

    , hspec-meta >= 1.12
    , silently >= 1.2.4
    , process
    , ghc-paths
  default-language: Haskell2010
