name:             hspec-core
version:          2.0.2
license:          MIT
license-file:     LICENSE
copyright:        (c) 2011-2014 Simon Hengel,
                  (c) 2011-2012 Trystan Spangler,
                  (c) 2011 Greg Weber
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         A Testing Framework for Haskell
description:      This package exposes internal types and functions that can be
                  used to extend Hspec's functionality.

source-repository head
  type: git
  location: https://github.com/hspec/hspec
  subdir: hspec-core

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  build-depends:
      base >= 4.3 && < 5
    , random
    , tf-random
    , setenv
    , ansi-terminal >= 0.5
    , time
    , transformers >= 0.2.2.0
    , deepseq
    , HUnit >= 1.2.5
    , QuickCheck >= 2.5.1
    , quickcheck-io
    , hspec-expectations
    , async >= 2
  exposed-modules:
      Test.Hspec.Core.Spec
      Test.Hspec.Core.Hooks
      Test.Hspec.Core.Runner
      Test.Hspec.Core.Formatters
      Test.Hspec.Core.QuickCheck
      Test.Hspec.Core.Util
  other-modules:
      Test.Hspec.Compat
      Test.Hspec.Core.Example
      Test.Hspec.Core.Tree
      Test.Hspec.Core.Spec.Monad
      Test.Hspec.Core.QuickCheckUtil
      Test.Hspec.Config
      Test.Hspec.Options
      Test.Hspec.FailureReport
      Test.Hspec.Core.Runner.Eval
      Test.Hspec.Core.Formatters.Internal
      Test.Hspec.Timer
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  other-modules:
      Helper
      Mock
      Test.Hspec.CompatSpec
      Test.Hspec.Core.ExampleSpec
      Test.Hspec.Core.FormattersSpec
      Test.Hspec.Core.HooksSpec
      Test.Hspec.Core.QuickCheckUtilSpec
      Test.Hspec.Core.RunnerSpec
      Test.Hspec.Core.SpecSpec
      Test.Hspec.Core.UtilSpec
      Test.Hspec.FailureReportSpec
      Test.Hspec.OptionsSpec
      Test.Hspec.TimerSpec
  ghc-options:
      -Wall
  build-depends:
      base == 4.*
    , random
    , tf-random
    , setenv
    , ansi-terminal
    , time
    , transformers
    , deepseq
    , HUnit
    , QuickCheck
    , quickcheck-io
    , hspec-expectations
    , async

    , hspec-meta >= 1.12
    , silently >= 1.2.4
    , process
    , ghc-paths
  default-language: Haskell2010
