name:             hspec-discover
version:          0.1.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Testing
synopsis:         Automatically discover and run Hspec tests
description:      Documentation is here: <https://github.com/sol/hspec-discover#readme>

source-repository head
  type: git
  location: https://github.com/sol/hspec-discover

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.Discover
  build-depends:
      base >= 4 && <= 5
    , hspec == 1.2.*

executable hspec-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  other-modules:
      Run
  build-depends:
      base >= 4 && <= 5
    , filepath
    , directory

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base >= 4 && <= 5
    , filepath
    , directory
    , hspec
    , hspec-shouldbe

test-suite example
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      example
  main-is:
      Spec.hs
  build-depends:
      base >= 4 && <= 5
    , hspec-shouldbe
    , hspec-discover

test-suite integration-test-empty
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      integration-test/empty
  main-is:
      Spec.hs
  build-depends:
      base >= 4 && <= 5
    , hspec-discover
