name:             hspec-discover
version:          2.1.1
license:          MIT
license-file:     LICENSE
copyright:        (c) 2012-2014 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10
category:         Testing
stability:        experimental
bug-reports:      https://github.com/hspec/hspec/issues
homepage:         http://hspec.github.io/
synopsis:         Automatically discover and run Hspec tests
description:      Automatically discover and run Hspec tests
                  .
                  <http://hspec.github.io/hspec-discover.html>

extra-source-files:
  test-data/nested-spec/FooSpec.hs
  test-data/nested-spec/Foo/Bar/BazSpec.hs
  test-data/nested-spec/Foo/BarSpec.hs
  test-data/empty-dir/Foo/Bar/Baz/.placeholder

source-repository head
  type: git
  location: https://github.com/hspec/hspec
  subdir: hspec-discover

library
  default-language: Haskell2010

executable hspec-discover
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  other-modules:
      Run
      Config
  build-depends:
      base == 4.*
    , filepath
    , directory
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      src
    , test
  main-is:
      Spec.hs
  other-modules:
      RunSpec
      ConfigSpec
  build-depends:
      base == 4.*
    , filepath
    , directory
    , hspec-meta >= 1.12
  default-language: Haskell2010
