name:             hspec-th
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2015 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Test.Hspec.TH
  build-depends:
      base == 4.*
    , template-haskell
    , hspec-core
    , hspec
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , hspec-th
    , hspec-core
    , hspec
  default-language: Haskell2010

test-suite example
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      example
  main-is:
      Spec.hs
  build-depends:
      base == 4.*
    , hspec-th
    , QuickCheck
  default-language: Haskell2010
