name:             hspec-discover-integration-tests
version:          0.0.0
build-type:       Simple
cabal-version:    >= 1.8

library

test-suite empty
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      empty
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec

test-suite with-formatter
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      with-formatter
  main-is:
      Spec.hs
  other-modules:
      FooSpec
  build-depends:
      base    == 4.*
    , hspec

test-suite with-io-formatter
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      with-io-formatter
  main-is:
      Spec.hs
  other-modules:
      FooSpec
      Formatter
  build-depends:
      base    == 4.*
    , hspec
    , transformers

test-suite with-formatter-empty
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      with-formatter-empty
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , hspec

test-suite with-no-main
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      with-no-main
  main-is:
      Main.hs
  other-modules:
      Spec
  build-depends:
      base    == 4.*
    , hspec
